#음식취향입력받기
- recipe json에 카테고리(영국식, 일식, 한식) 추가
- post.html에서 취향 입력받을 수 있도록 변경
- prompt 수정

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ pyvenv.cfg
 # kaggle Data보관- Food Recipes(https://www.kaggle.com/datasets/crispen5gar/recipes3k?select=recipes.json)
 /data
 /storage
+/storage2
 /include
+/chroma_db
